<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_32dp" >

        <ImageView
            android:id="@+id/imageView_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Clean Laundry"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/llLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_logo">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Clean"
                android:textColor="@color/primary"
                android:textSize="35dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Laundry"
                android:textColor="@color/secondary"
                android:textSize="35dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/labelMsgLogin"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/llLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:textAlignment="center"
            android:text="@string/message_register"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfNamaLengkap"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/labelMsgLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_26dp"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:hint="@string/label_nama_lengkap">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNamaLengkap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfAlamat"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/tfNamaLengkap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:hint="@string/label_alamat">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLines="10"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfDateOfBirth"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/tfAlamat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:hint="@string/label_tanggal_lahir">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:onClick="showDatePickerDialog"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/tfDateOfBirth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:hint="@string/label_phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/tfPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:hint="@string/label_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/tfUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:hint="@string/label_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/tfEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#797B89"
            android:hint="@string/label_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            app:layout_constraintTop_toBottomOf="@id/tfPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/primary"
            android:textColor="@color/white"
            style="@style/Widget.MaterialComponents.Button"
            app:cornerRadius="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:textAllCaps="true"
            android:text="@string/label_register"
            android:paddingVertical="12dp"
            android:textSize="16sp"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Sudah punya akun?"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/label_log_in"
            android:textColor="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="7dp"/>

        <ProgressBar
            android:id="@+id/pbRegister"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/btnRegister"
            app:layout_constraintStart_toStartOf="@id/tfPassword"
            app:layout_constraintEnd_toEndOf="@id/tfPassword"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>